Update import statements in page components

--- a/website/app/[locale]/(root)/docs/browser-support/content.mdx
+++ b/website/app/[locale]/(root)/docs/browser-support/content.mdx
@@ -9,7 +9,7 @@ To check for specific CSS feature support, visiting [caniuse.com](https://canius
 
 ---
 
-## Vendor prefixes
+## Built-in vendor prefixes
 Most CSS rules are prepended with the appropriate vendor prefix.
 
 ### Auto-prefixed CSS properties
@@ -36,7 +36,7 @@ Same goes for some CSS selectors.
 
 ---
 
-## Latest CSS features
+## Using latest CSS features
 Master CSS has built-in commonly used CSS properties, and you hardly need to extend rules to transform styles, but once new CSS features are launched, how to use them immediately?
 
 ### Support the new CSS property
