--- a/website/app/[locale]/(root)/docs/font-family/content.mdx
+++ b/website/app/[locale]/(root)/docs/font-family/content.mdx
@@ -2,7 +2,7 @@
 <Overview/>
 
 <Demo $py={0}>
-    <DemoPanel className="flex flex:col gap:30">
+    <DemoPanel className="flex flex:col gap:8x">
         <div className="w:full">
             <DemoLabel>sans</DemoLabel>
             <DemoP className="font:sans">Heavy boxes perform quick waltzes and jigs.</DemoP>
@@ -30,7 +30,7 @@ Using shorthand with predefined [variables](/docs/variables) to simplify the nat
 ### Set the font family
 Set the typeface of an element using the `font-family:` syntax.
 <Demo $py={0}>
-    <DemoPanel className="flex flex:col gap:30">
+    <DemoPanel className="flex flex:col gap:8x">
         <div className="w:full">
             <DemoP className="font-family:cursive">Heavy boxes perform quick waltzes and jigs.</DemoP>
         </div>
