--- a/website/app/[locale]/(root)/docs/fonts/content.mdx
+++ b/website/app/[locale]/(root)/docs/fonts/content.mdx
@@ -1,6 +1,6 @@
 ## Overview [sr-only]
 <Demo $py={0}>
-    <DemoPanel className="flex flex:col gap:30">
+    <DemoPanel className="flex flex:col gap:8x">
         <div className="w:full">
             <DemoLabel>sans</DemoLabel>
             <DemoP className="font:sans">Heavy boxes perform quick waltzes and jigs.</DemoP>
