--- a/website/app/[locale]/(root)/docs/global-styles/content.mdx
+++ b/website/app/[locale]/(root)/docs/global-styles/content.mdx
@@ -40,7 +40,7 @@ Fixed the inconsistent appearance of controls across browsers.
 ### Consistent horizontal lines
 Fixed the inconsistent appearance of horizontal lines across browsers.
 <Demo $py={0}>
-    <DemoPanel className="grid-cols:2 gap:30 gap:12x@sm w:full">
+    <DemoPanel className="grid-cols:2 gap:8x gap:12x@sm w:full">
         <div>
             <small>Before</small>
             <hr className="mt:20! mb:0! {all:revert}" />
@@ -98,7 +98,7 @@ The `html <a>` element usually serves as more than just an inline text link; it 
 
 Removing its default underline and inheriting the parent color allows you to start with a clean style.
 <Demo $py={0}>
-    <DemoPanel className="grid-cols:2 gap:30 gap:12x@sm">
+    <DemoPanel className="grid-cols:2 gap:8x gap:12x@sm">
         <div>
             <small>Before</small>
             <a href="#" className="mt:10 block text:underline fg:revert">Learn more</a>
