--- a/website/app/[locale]/(root)/docs/introduction/content.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/content.mdx
@@ -2,7 +2,22 @@
 ---
 
 ## What is Master CSS?
+Master CSS is a **CSS language** and **CSS framework** for rapidly building modern and high-performance websites.
+
+### Markup-driven language
 Master CSS is a markup-driven CSS language with smart rules allowing you to write familiar CSS using concise syntax within HTML.
+
+The following example uses a convenient [runtime CDN](/docs/installation/cdn):
+<Demo>
+    <h1 className="fg:strong font:40 font:heavy m:4x text:center">Hello World</h1>
+</Demo>
+```html
+<script src="https://cdn.master.co/css-runtime@rc"></script>
+...
+<h1 class="**fg:strong** **font:40** **font:heavy** **m:4x** **text:center**">Hello World</h1>
+```
+
+### All-in-one framework
 
 ---
 
@@ -11,3 +26,7 @@ Master CSS is a markup-driven CSS language with smart rules allowing you to writ
 ---
 
 ## Essential Reading
+
+---
+
+## Join our community
