--- a/website/app/[locale]/(root)/docs/migration/content.mdx
+++ b/website/app/[locale]/(root)/docs/migration/content.mdx
@@ -1,16 +1,8 @@
 import migrations from 'websites/data/migrations'
 
-## Frameworks
-<IconButtons url="/docs/migration">
-    {migrations.framework}
-</IconButtons>
+---
 
-## Languages
+## Guides
 <IconButtons url="/docs/migration">
-    {migrations.language}
-</IconButtons>
-
-## CSS-in-JS
-<IconButtons url="/docs/migration">
-    {migrations.cssInJS}
+    {migrations}
 </IconButtons>
