--- a/website/app/[locale]/(root)/docs/preload-critical-resources/content.mdx
+++ b/website/app/[locale]/(root)/docs/preload-critical-resources/content.mdx
@@ -9,10 +9,10 @@ It may experience defers in downloading and initializing until the first content
 <!DOCTYPE html>
 <html lang="en" style="display: none">
 <head>
-+    <link rel="preload" as="script" href="https://cdn.master.co/css@rc">
++    <link rel="preload" as="script" href="https://cdn.master.co/css-runtime@rc">
     <link rel="preload" as="style" href="https://cdn.master.co/normal.css@rc">
     <link rel="stylesheet" href="https://cdn.master.co/normal.css@rc">
-    <script src="https://cdn.master.co/css@rc"></script>
+    <script src="https://cdn.master.co/css-runtime@rc"></script>
 </head>
 </html>
 ```
