--- a/website/app/[locale]/(root)/docs/rendering-modes/content.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/content.mdx
@@ -130,7 +130,7 @@
     <thead>
         <tr>
             <th colSpan={3} className="pt:30">
-                <div className="text:18">Page load</div>
+                <div className="text:18">First page load</div>
             </th>
         </tr>
     </thead>
@@ -140,7 +140,7 @@
                 <InlineGood />**Lazy loading runtime engine**
             </td>
             <td>
-                ~16KB runtime engine
+                ~17KB runtime engine
             </td>
             <td>
                 <InlineGood />**No runtime engine**
@@ -287,17 +287,17 @@
     <thead>
         <tr>
             <th colSpan={3} className="pt:30">
-                <div className="text:18">The reliability of CSS rules</div>
+                <div className="text:18">The source reliability of CSS rules</div>
             </th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td>
-                <InlineGood />**<code>class</code> attributes** in markup
+                <InlineGood />**`class` attributes** in markup
             </td>
             <td>
-                <InlineGood />**<code>class</code> attributes** in markup
+                <InlineGood />**`class` attributes** in markup
             </td>
             <td>
                 <InlineWarn />Scan all source files
