--- a/website/app/[locale]/(root)/docs/text-transform/content.mdx
+++ b/website/app/[locale]/(root)/docs/text-transform/content.mdx
@@ -2,7 +2,7 @@
 <Overview/>
 
 <Demo $py={0}>
-    <DemoPanel className="flex flex:col gap:30">
+    <DemoPanel className="flex flex:col gap:8x">
         <div className="w:full">
             <DemoLabel>capitalize</DemoLabel>
             <DemoP><b className="bg-stripe-pink">H</b>eavy <b className="bg-stripe-pink">B</b>oxes <b className="bg-stripe-pink">P</b>erform <b className="bg-stripe-pink">Q</b>uick <b className="bg-stripe-pink">W</b>altzes <b className="bg-stripe-pink">A</b>nd <b className="bg-stripe-pink">J</b>igs.</DemoP>
