--- a/website/app/[locale]/(root)/docs/break-before/content.mdx
+++ b/website/app/[locale]/(root)/docs/break-before/content.mdx
@@ -6,7 +6,7 @@
 Use `break-before:value` to set how breaks should behave before a generated box.
 <Demo className="py:0!">
     <div className="bg:float p:8x">
-        <div className="gap:30 cols:2">
+        <div className="gap:8x cols:2">
             <div className="f:28 f:bold">Briefs</div>
             <p>A content brief is a document that outlines the key details of a piece of content. It should include an overview of the project, a well as any specific instructions or requirements. </p>
             <hr className="border:2px|solid|gray-80 break-before:column" />
