--- a/website/app/[locale]/(root)/docs/columns/content.mdx
+++ b/website/app/[locale]/(root)/docs/columns/content.mdx
@@ -5,7 +5,7 @@
 ### Set column count
 Use `mcss cols:value` to set the number of columns when creating a multi-column layout. The column width will automatically adjust to the column count.
 <Demo className="py:0!">
-    <div className="gap:30 cols:3@sm cols:1 w:full break-inside:avoid_:where(div)">
+    <div className="gap:8x cols:3@sm cols:1 w:full break-inside:avoid_:where(div)">
         <div className="bg-stripe-pink pt:32">
             <Image src="/images/mountain4.jpg" width={300} height={200} alt="mountain" className="aspect:3/2 r:1x object:cover" />
         </div>
@@ -46,7 +46,7 @@ Use `mcss cols:value` to set the number of columns when creating a multi-column 
 ### Flexible multi-column layout
 Use `mcss cols:count|width` to set the minimum width of each column to `width` and the maximum number of columns to `count` columns when creating a flexible multi-column layout.
 <Demo className="py:0!">
-    <div className="gap:30 cols:4|100px@sm cols:1 w:full break-inside:avoid_:where(div)">
+    <div className="gap:8x cols:4|100px@sm cols:1 w:full break-inside:avoid_:where(div)">
         <div className="bg-stripe-pink pt:32">
             <Image src="/images/mountain20.jpg" width={300} height={200} alt="mountain" className="aspect:3/2 r:1x object:cover" />
         </div>
