--- a/website/app/[locale]/(root)/docs/rendering-modes/components/RuntimeRenderingIntro.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/components/RuntimeRenderingIntro.mdx
@@ -27,7 +27,7 @@ Master CSS [Runtime Rendering](/docs/rendering-modes/runtime-rendering) observes
             <div>
                 **CSS lifecycle**
 
-                CSS is generated on demand and frees memory when not in use
+                Generated on-demand and frees memory when not in use
             </div>
         </Feature>
     </Features>
