--- a/website/app/[locale]/(root)/docs/responsive-design/content.mdx
+++ b/website/app/[locale]/(root)/docs/responsive-design/content.mdx
@@ -7,7 +7,7 @@ import Default from '../media-queries/components/Default'
 ```html
 <div class="grid-cols:2 grid-cols:3**@xs** grid-cols:4**@sm** grid-cols:5**@md** …">…</div>
 ```
-The syntax in Master CSS allows for the conditional application of styles at different viewports, with up to [11 predefined viewport widths](/docs/viewports) available.
+The syntax in Master CSS allows for the conditional application of styles at different viewports, with up to [11 predefined viewport widths](/docs/screens) available.
 
 This comprehensive coverage caters to the modern web layout scenario.
 <Default />
@@ -44,7 +44,7 @@ Generated CSS:
 This relies on CSS precedence behavior to override mobile styles with new styles on larger viewports.
 
 ### Desktop-first
-On the other hand, the Desktop-first development strategy initially prioritizes designing and optimizing for larger screen sizes, such as desktop computers, and then gradually scaling down to smaller screen sizes, like mobile phones and tablets. 
+On the other hand, the Desktop-first development strategy initially prioritizes designing and optimizing for larger screen sizes, such as desktop computers, and then gradually scaling down to smaller screen sizes, like mobile phones and tablets.
 
 For example, your company is launching a web drawing software primarily targeting designers with potential future releases for mobile users based on market response; adopting a desktop-first strategy would be ideal at this stage.
 
