--- a/website/i18n/tw.json
+++ b/website/i18n/tw.json
@@ -1,4 +1,5 @@
 {
+    "The CSS language and framework for rapidly building modern and high-performance websites.": "一個 CSS 語言兼框架，用於快速打造現代且具高效能的網站。",
     "Updates": "更新",
     "Daily": "日常",
     "ON THIS PAGE": "該頁目錄",
