Refactor critical CSS benchmark output format

--- a/website/app/[locale]/(root)/docs/introduction/content.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/content.mdx
@@ -45,7 +45,7 @@ Initially, Master CSS was intended to create a CSS engine for production browser
 Master CSS doesn't use heavy-duty build tools like [PostCSS](https://postcss.org), [Autoprefixer](https://github.com/postcss/autoprefixer), or any CSS minifiers, and includes these optimizations in the early stages of rule generation.
 
 ### Minimal CSS on the market
-This is a real-world [critical CSS benchmark](https://github.com/master-co/css/tree/rc/benchmarks/critical-css-for-docs-sites) against well-known official documentation websites.
+This is a real-world benchmark of critical CSS on page load for well-known official documentation websites.
 <CriticalCSSForDocsSitesBenchmark />
 
 [Reducing critical CSS](https://web.dev/articles/codelab-extract-and-inline-critical-css) will improve page loading speed, browser rendering performance, and memory usage.
