Update import paths in layout files

--- a/website/i18n/tw.json
+++ b/website/i18n/tw.json
@@ -5,6 +5,8 @@
     "ON THIS PAGE": "該頁目錄",
     "Changelog": "變更日誌",
     "Issue on this page": "關於此頁的問題",
+    "This page does not exist": "此頁面不存在",
+    "Sorry, the page cannot be found. Please try searching for other content.": "抱歉，找不到該頁面。請嘗試搜尋其他內容。",
     "Edited by": "編輯自",
     "Authored by": "撰寫自",
     "Migration": "遷移",
